--- a/src/changelog.html
+++ b/src/changelog.html
@@ -30,18 +30,19 @@ Released   : 20081230
 		<div class="contentText">
 			<br>
 <pre>
-1.0.0:  Initial Release
-1.0.1:  Bug Fix: "Only works on the Firstpage"
-1.0.2:  Bug Fix: "Opens also links from 'recent viewed' "
-1.0.3:  Now works for all Subreddits
-1.0.4:  Only unvisited (new) Links will be opened. Can be changed on Option Page.
-1.0.5:  You can choose a limit to new Tabs, default is 25. New Design For Options.
-1.0.6:  Check for NFSW tag in the link Title.
-1.0.7:  Removed Debug Messages.
-1.0.8:  Add Keyboard Shortcut Support. You can define the Shortcut in the Options. Default is Ctrl+Shift+F.
-1.0.9:  Add option to Open comments.
+1.0.0 : Initial Release
+1.0.1 : Bug Fix: "Only works on the Firstpage"
+1.0.2 : Bug Fix: "Opens also links from 'recent viewed' "
+1.0.3 : Now works for all Subreddits
+1.0.4 : Only unvisited (new) Links will be opened. Can be changed on Option Page.
+1.0.5 : You can choose a limit to new Tabs, default is 25. New Design For Options.
+1.0.6 : Check for NFSW tag in the link Title.
+1.0.7 : Removed Debug Messages.
+1.0.8 : Add Keyboard Shortcut Support. You can define the Shortcut in the Options. Default is Ctrl+Shift+F.
+1.0.9 : Add option to Open comments.
 1.0.10: Add option to Open Links directly.
 1.0.11: Bugfix.
+1.1.0 : Open Reddit Companion Bar automatically 
 </pre>		
 			<a href="options.html">Open Option Page</a>
 		</div>  
