big code rework +goto next page when no new links are found

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -1,4 +1,4 @@
- <!--
+<!--
 Design by Bryant Smith
 http://www.bryantsmith.com
 http://www.aszx.net
@@ -10,25 +10,21 @@ Description: One column, with top naviagation
 Version    : 1.0
 Released   : 20081230
 -->
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-<title>F7U12 Link Opener - Changelog</title>
-</head>
-
-<body>
-	<div id="page">
-		<div id="header">
-			<h1>F7U12 Link Opener</h1>
-			<h2>Changelog</h2>
-		</div>
-
-		<div class="contentText">
-			<br>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="stylesheet" type="text/css" href="style.css" />
+		<title>F7U12 Link Opener - Changelog</title>
+	</head>
+	<body>
+		<div id="page">
+			<div id="header">
+				<h1>F7U12 Link Opener</h1>
+				<h2>Changelog</h2>
+			</div>
+			<div class="contentText">
+				<br>
 <pre>
 1.0.0 : Initial Release
 1.0.1 : Bug Fix: "Only works on the Firstpage"
@@ -42,11 +38,12 @@ Released   : 20081230
 1.0.9 : Add option to Open comments.
 1.0.10: Add option to Open Links directly.
 1.0.11: Bugfix.
-1.1.0 : Open Reddit Companion Bar automatically 
-</pre>		
-			<a href="options.html">Open Option Page</a>
-		</div>  
-	</div>
-	<div id="footer"></div>
-</body>
+1.1.0 : Open Reddit Companion Bar automatically
+1.2.0 : When no new links are found change automatically to next page - also bugfixes
+</pre>
+				<a href="options.html">Open Option Page</a>
+			</div>
+		</div>
+		<div id="footer"></div>
+	</body>
 </html>
