--- a/src/options.html
+++ b/src/options.html
@@ -96,7 +96,7 @@ Released   : 20081230
 					<input type=checkbox id="openvisitedlinks" value="true">
 				</p>
 				<p>
-					Open Links with NSFW in the Title:
+					Open NSFW Links:
 					<input type=checkbox id="opennsfwlinks" value="true">
 				</p>
 				<p>
