remove debug message

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -39,7 +39,8 @@ Released   : 20081230
 1.0.10: Add option to Open Links directly.
 1.0.11: Bugfix.
 1.1.0 : Open Reddit Companion Bar automatically
-1.2.0 : When no new links are found change automatically to next page - also bugfixes
+1.2.0 : When no new links are found change automatically to next page - also many bugfixes
+1.2.1 : Remove Debug message
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
