--- a/src/changelog.html
+++ b/src/changelog.html
@@ -34,13 +34,14 @@ Released   : 20081230
 1.0.5 : You can choose a limit to new Tabs, default is 25. New Design For Options.
 1.0.6 : Check for NFSW tag in the link Title.
 1.0.7 : Removed Debug Messages.
-1.0.8 : Add Keyboard Shortcut Support. You can define the Shortcut in the Options. Default is Ctrl+Shift+F.
+1.0.8 : Add Keyboard Shortcut Support. Customize Shortcut in the Options. Default is Ctrl+Shift+F.
 1.0.9 : Add option to Open comments.
 1.0.10: Add option to Open Links directly.
 1.0.11: Bugfix.
 1.1.0 : Open Reddit Companion Bar automatically
 1.2.0 : When no new links are found change automatically to next page - also many bugfixes
 1.2.1 : Remove Debug message
+1.2.2 : Goto next Page works correct now (All links purple->Press MeGusta->change to the next page)
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
