--- a/src/changelog.html
+++ b/src/changelog.html
@@ -42,6 +42,7 @@ Released   : 20081230
 1.2.0 : When no new links are found change automatically to next page - also many bugfixes
 1.2.1 : Remove Debug message
 1.2.2 : Goto next Page works correct now (All links purple->Press MeGusta->change to the next page)
+1.2.3 : Fix Bug: Only open even links
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
