Update to Manifest 2 and change Extension name

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -15,12 +15,12 @@ Released   : 20081230
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<link rel="stylesheet" type="text/css" href="style.css" />
-		<title>F7U12 Link Opener - Changelog</title>
+		<title>Reddit Link Opener - Changelog</title>
 	</head>
 	<body>
 		<div id="page">
 			<div id="header">
-				<h1>F7U12 Link Opener</h1>
+				<h1>Reddit Link Opener</h1>
 				<h2>Changelog</h2>
 			</div>
 			<div class="contentText">
@@ -43,6 +43,7 @@ Released   : 20081230
 1.2.1 : Remove Debug message
 1.2.2 : Goto next Page works correct now (All links purple->Press MeGusta->change to the next page)
 1.2.3 : Fix Bug: Only open even links
+1.2.4 : Updated to Manifest 2 and changed Name of the Extension to "Reddit Link Opener"
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
