--- a/src/changelog.html
+++ b/src/changelog.html
@@ -45,6 +45,7 @@ Released   : 20081230
 1.2.3 : Fix Bug: Only open even links
 1.2.4 : Updated to Manifest 2 and changed Name of the Extension to "Reddit Link Opener"
 1.3.0 : Open only links/comments that are visible (e.g. hidden by another extensions)
+1.4.0 : Do not open links that are marked as visited through Reddit Gold
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
