--- a/src/changelog.html
+++ b/src/changelog.html
@@ -46,6 +46,7 @@ Released   : 20081230
 1.2.4 : Updated to Manifest 2 and changed Name of the Extension to "Reddit Link Opener"
 1.3.0 : Open only links/comments that are visible (e.g. hidden by another extensions)
 1.4.0 : Do not open links that are marked as visited through Reddit Gold
+1.5.0 : Mark links visited on another computer with Gold correctly
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
