--- a/src/changelog.html
+++ b/src/changelog.html
@@ -47,6 +47,7 @@ Released   : 20081230
 1.3.0 : Open only links/comments that are visible (e.g. hidden by another extensions)
 1.4.0 : Do not open links that are marked as visited through Reddit Gold
 1.5.0 : Mark links visited on another computer with Gold correctly
+1.5.1 : Fix links not being marked as visited and opened more than once
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
