Add option to open i.redd.it and i.reddituploads.com image links directly, and remove buggy imgur direct link option

--- a/src/options.html
+++ b/src/options.html
@@ -39,7 +39,7 @@ Released   : 20081230
 					<input type=checkbox id="opennsfwlinks" value="true">
 				</p>
 				<p>
-					Open Links directly (Add .png to all imgur links):
+					Open i.redd.it and ireddituploads image links directly:
 					<input type=checkbox id="openlinksdirectly" value="false">
 				</p>
 				<p>
