Fix query selectors to support new reddit layout and bump version

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -49,6 +49,7 @@ Released   : 20081230
 1.5.0 : Mark links visited on another computer with Gold correctly
 1.5.1 : Fix links not being marked as visited and opened more than once
 1.6.0 : Add option to open i.redd.it and i.reddituploads.com image links directly
+1.7.0 : Apply band-aid fix to support the new reddit layout
 </pre>
 				<a href="options.html">Open Option Page</a>
 			</div>
