--- a/src/options.html
+++ b/src/options.html
@@ -38,7 +38,7 @@ Released   : 20081230
 					Open NSFW Links:
 					<input type=checkbox id="opennsfwlinks" value="true">
 				</p>
-				<p>
+				<p style="display: none;">
 					Open i.redd.it and ireddituploads image links directly:
 					<input type=checkbox id="openlinksdirectly" value="false">
 				</p>
